--- a/src/app/(app)/globals.css
+++ b/src/app/(app)/globals.css
@@ -70,12 +70,7 @@
   left: -2px;
   right: -2px;
   bottom: -2px;
-  background-image: conic-gradient(
-    from var(--angle),
-    transparent 75%,
-    #10b981,
-    #7c3aed
-  );
+  background-image: conic-gradient(from var(--angle), transparent 75%, #7c3aed);
   z-index: -1;
   border-radius: 0.375rem;
   animation: spin 8s linear infinite;
