--- a/src/app/(app)/globals.css
+++ b/src/app/(app)/globals.css
@@ -103,3 +103,12 @@ hide-scroll-bar {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+
+.line-clamp {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  overflow: hidden;
+  word-break: break-all;
+  overflow-wrap: anywhere;
+}
